Fix Java 17 crash